--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -1,54 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>{% block title %} {% endblock %} - FlaskApp</title>
-    <style>
-        h2 {
-            width: 100%;
-        }
-
-        .title {
-            margin: 5px;
-            width: 100%;
-        }
-
-        .content {
-            margin: 5px;
-            width: 100%;
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-        }
-
-        .post {
-            flex: 20%;
-            padding: 10px;
-            margin: 5px;
-            background-color: #f3f3f3;
-            inline-size: 100%;
-        }
-
-        .title a {
-            color: #00a36f;
-            text-decoration: none;
-        }
-
-        nav a {
-            color: #d64161;
-            font-size: 3em;
-            margin-left: 50px;
-            text-decoration: none;
-        }
-
-    </style>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>{% block title %} {% endblock %} - FlaskApp</title>
+   <script src="https://cdn.babylonjs.com/babylon.js"></script>
+   <style>
+       #renderCanvas {
+           width: 100%;
+           height: 100vh;
+           touch-action: none;
+       }
+   </style>
 </head>
 <body>
     <nav>
-        <a href="{{ url_for('main.index') }}">FlaskApp</a>
-        <a href="{{ url_for('posts.index') }}">Posts</a>
-        <a href="{{ url_for('posts.categories') }}">Categories</a>
-        <a href="{{ url_for('questions.index') }}">Questions</a>
+        <a href="/scene1">Go to Scene 1</a>
+        <a href="/scene2">Go to Scene 2</a>
+        <a href="/scene3">Go to Scene 3</a>
     </nav>
     <hr>
     <div class="content">
