Add scenes to db

--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -15,9 +15,10 @@
 </head>
 <body>
     <nav>
-        <a href="/scene1">Go to Scene 1</a>
-        <a href="/scene2">Go to Scene 2</a>
-        <a href="/scene3">Go to Scene 3</a>
+        <a href="/scenes">Go to Scenes</a>
+        <a href="/scenes/1">Go to Scene 1</a>
+        <a href="/scenes/2">Go to Scene 2</a>
+        <a href="/scenes/3">Go to Scene 3</a>
     </nav>
     <hr>
     <div class="content">
