--- a/flask_app/app/templates/shot_types/edit_shot_type.html
+++ b/flask_app/app/templates/shot_types/edit_shot_type.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Edit Shot Type</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
     <h1>Edit Shot Type</h1>
     <form method="POST">
         {{ form.hidden_tag() }}
