--- a/flask_app/app/templates/shot_types/new_shot_type.html
+++ b/flask_app/app/templates/shot_types/new_shot_type.html
@@ -13,5 +13,4 @@
         {{ form.submit() }}
     </form>
     <a href="{{ url_for('shot_type.list_shot_types') }}">Back to Shot Types</a> 
-</body> 
-</html>
+{% endblock %}
