--- a/flask_app/app/templates/camera_types/new_camera_type.html
+++ b/flask_app/app/templates/camera_types/new_camera_type.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Create New Shot Type</h1>
+<h1>Create New Camera Type</h1>
 <form method="POST">
     {{ form.hidden_tag() }}
-    <label for="name">Shot Type Name:</label>
+    <label for="name">Camera Type Name:</label>
     {{ form.name(size=32) }}<br>
 
     <label for="description">Description:</label>
@@ -12,5 +12,5 @@
 
     {{ form.submit() }}
 </form>
-<a href="{{ url_for('shot_type.list_shot_types') }}">Back to Shot Types</a>
+<a href="{{ url_for('camera_type.list_camera_types') }}">Back to Camera Types</a>
 {% endblock %}
