--- a/flask_app/app/templates/games/games.html
+++ b/flask_app/app/templates/games/games.html
@@ -1,17 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Games</h1>
-<a href="{{ url_for('game.new_game') }}">Create New Game</a>
-<ul>
-    {% for game in games %}
-    <li>
-        {{ game.title }}
-        <a href="{{ url_for('game.edit_game', game_id=game.id) }}">Edit</a>
-        <form action="{{ url_for('game.delete_game', game_id=game.id) }}" method="POST" style="display:inline;">
-            <button type="submit">Delete</button>
-        </form>
-    </li>
-    {% endfor %}
-</ul>
+<span class="title">
+    <h1>{% block title %} Games {% endblock %}</h1>
+</span>
+<div class="content">
+    <a href="{{ url_for('game.new_game') }}">Create New Game</a>
+    <ul>
+        {% for game in games %}
+        <li>
+            {{ game.title }}
+            <a href="{{ url_for('game.edit_game', game_id=game.id) }}">Edit</a>
+            <form action="{{ url_for('game.delete_game', game_id=game.id) }}" method="POST" style="display:inline;">
+                <button type="submit">Delete</button>
+            </form>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
 {% endblock %}
