--- a/flask_app/app/templates/boards/boards.html
+++ b/flask_app/app/templates/boards/boards.html
@@ -1,17 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Boards</h1>
-<a href="{{ url_for('board.new_board') }}">Create New Board</a>
-<ul>
-    {% for board in boards %}
-    <li>
-        {{ board.name }}
-        <a href="{{ url_for('board.edit_board', board_id=board.id) }}">Edit</a>
-        <form action="{{ url_for('board.delete_board', board_id=board.id) }}" method="POST" style="display:inline;">
-            <button type="submit">Delete</button>
-        </form>
-    </li>
-    {% endfor %}
-</ul>
+<span class="title">
+    <h1>{% block title %} Boards {% endblock %}</h1>
+</span>
+<div class="content">
+    <a href="{{ url_for('board.new_board') }}">Create New Board</a>
+    <ul>
+        {% for board in boards %}
+        <li>
+            {{ board.name }}
+            <a href="{{ url_for('board.edit_board', board_id=board.id) }}">Edit</a>
+            <form action="{{ url_for('board.delete_board', board_id=board.id) }}" method="POST" style="display:inline;">
+                <button type="submit">Delete</button>
+            </form>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
 {% endblock %}
