--- a/flask_app/app/templates/players/players.html
+++ b/flask_app/app/templates/players/players.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <span class="title">
-    <h1>{% block title %} Scenes {% endblock %}</h1>
+    <h1>{% block title %} Players {% endblock %}</h1>
 </span>
 <div class="content">
     <a href="{{ url_for('player.new_player') }}">Create New Player</a>
