--- a/flask_app/app/templates/users/edit_user.html
+++ b/flask_app/app/templates/users/edit_user.html
@@ -1,22 +1,26 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Edit User</h1>
-<form method="POST">
-    {{ form.hidden_tag() }}
-    <label for="username">Username:</label>
-    {{ form.username(size=32) }}<br>
+<span class="title">
+    <h1>{% block title %} Edit User {% endblock %}</h1>
+</span>
+<div class="content">
+    <form method="POST">
+        {{ form.hidden_tag() }}
+        <label for="username">Username:</label>
+        {{ form.username(size=32) }}<br>
 
-    <label for="email">Email:</label>
-    {{ form.email(size=32) }}<br>
+        <label for="email">Email:</label>
+        {{ form.email(size=32) }}<br>
 
-    <label for="password">Password:</label>
-    {{ form.password(size=32) }}<br>
+        <label for="password">Password:</label>
+        {{ form.password(size=32) }}<br>
 
-    <label for="confirm_password">Confirm Password:</label>
-    {{ form.confirm_password(size=32) }}<br>
+        <label for="confirm_password">Confirm Password:</label>
+        {{ form.confirm_password(size=32) }}<br>
 
-    {{ form.submit() }}
-</form>
-<a href="{{ url_for('user.list_users') }}">Back to Users</a>
+        {{ form.submit() }}
+    </form>
+    <a href="{{ url_for('user.list_users') }}">Back to Users</a>
+</div>
 {% endblock %}
