--- a/flask_app/app/templates/characters/new_character.html
+++ b/flask_app/app/templates/characters/new_character.html
@@ -1,16 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Create New Character</h1>
-<form method="POST">
-    {{ form.hidden_tag() }}
-    <label for="name">Character Name:</label>
-    {{ form.name(size=32) }}<br>
+<span class="title">
+    <h1>{% block title %} Create New Character {% endblock %}</h1>
+</span>
+<div class="content">
+    <form method="POST">
+        {{ form.hidden_tag() }}
+        <label for="name">Character Name:</label>
+        {{ form.name(size=32) }}<br>
 
-    <label for="model_url">Model URL:</label>
-    {{ form.model_url(size=32) }}<br>
+        <label for="model_url">Model URL:</label>
+        {{ form.model_url(size=32) }}<br>
 
-    {{ form.submit() }}
-</form>
-<a href="{{ url_for('character.list_characters') }}">Back to Characters</a>
+        {{ form.submit() }}
+    </form>
+    <a href="{{ url_for('character.list_characters') }}">Back to Characters</a>
+</div>
 {% endblock %}
