--- a/flask_app/app/templates/fields/edit_field.html
+++ b/flask_app/app/templates/fields/edit_field.html
@@ -1,22 +1,26 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Edit Field</h1>
-<form method="POST">
-    {{ form.hidden_tag() }}
-    <label for="name">Field Name:</label>
-    {{ form.name(size=32) }}<br>
+<span class="title">
+    <h1>{% block title %} Edit Field {% endblock %}</h1>
+</span>
+<div class="content">
+    <form method="POST">
+        {{ form.hidden_tag() }}
+        <label for="name">Field Name:</label>
+        {{ form.name(size=32) }}<br>
 
-    <label for="description">Description:</label>
-    {{ form.description(cols=30, rows=5) }}<br>
+        <label for="description">Description:</label>
+        {{ form.description(cols=30, rows=5) }}<br>
 
-    <label for="field_type_id">Field Type:</label>
-    {{ form.field_type_id() }}<br>
+        <label for="field_type_id">Field Type:</label>
+        {{ form.field_type_id() }}<br>
 
-    <label for="board_id">Board:</label>
-    {{ form.board_id() }}<br>
+        <label for="board_id">Board:</label>
+        {{ form.board_id() }}<br>
 
-    {{ form.submit() }}
-</form>
-<a href="{{ url_for('field.list_fields') }}">Back to Fields</a>
+        {{ form.submit() }}
+    </form>
+    <a href="{{ url_for('field.list_fields') }}">Back to Fields</a>
+</div>
 {% endblock %}
