--- a/flask_app/app/templates/player_roles/edit_player_role.html
+++ b/flask_app/app/templates/player_roles/edit_player_role.html
@@ -1,16 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Edit Player Role</h1>
-<form method="POST">
-    {{ form.hidden_tag() }}
-    <label for="name">Player Role Name:</label>
-    {{ form.name(size=32) }}<br>
+<span class="title">
+    <h1>{% block title %} Edit Player Role {% endblock %}</h1>
+</span>
+<div class="content">
+    <form method="POST">
+        {{ form.hidden_tag() }}
+        <label for="name">Player Role Name:</label>
+        {{ form.name(size=32) }}<br>
 
-    <label for="description">Player Role Description:</label>
-    {{ form.description(cols=30, rows=5) }}<br>
+        <label for="description">Player Role Description:</label>
+        {{ form.description(cols=30, rows=5) }}<br>
 
-    {{ form.submit() }}
-</form>
-<a href="{{ url_for('player_role.list_player_roles') }}">Back to Player Roles</a>
+        {{ form.submit() }}
+    </form>
+    <a href="{{ url_for('player_role.list_player_roles') }}">Back to Player Roles</a>
+</div>
 {% endblock %}
