--- a/flask_app/app/templates/screenplays/edit_screenplay.html
+++ b/flask_app/app/templates/screenplays/edit_screenplay.html
@@ -1,16 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Edit Screenplay</h1>
-<form method="POST">
-    {{ form.hidden_tag() }}
-    <label for="name">Screenplay Name:</label>
-    {{ form.name(size=32) }}<br>
+<span class="title">
+    <h1>{% block title %} Edit Screenplay {% endblock %}</h1>
+</span>
+<div class="content">
+    <form method="POST">
+        {{ form.hidden_tag() }}
+        <label for="name">Screenplay Name:</label>
+        {{ form.name(size=32) }}<br>
 
-    <label for="description">Description:</label>
-    {{ form.description(cols=30, rows=5) }}<br>
+        <label for="description">Description:</label>
+        {{ form.description(cols=30, rows=5) }}<br>
 
-    {{ form.submit() }}
-</form>
-<a href="{{ url_for('screenplay.list_screenplays') }}">Back to Screenplays</a>
+        {{ form.submit() }}
+    </form>
+    <a href="{{ url_for('screenplay.list_screenplays') }}">Back to Screenplays</a>
+</div>
 {% endblock %}
