--- a/flask_app/app/templates/users/users.html
+++ b/flask_app/app/templates/users/users.html
@@ -1,17 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Users</h1>
-<a href="{{ url_for('user.new_user') }}">Create New User</a>
-<ul>
-    {% for user in users %}
-    <li>
-        {{ user.username }} - {{ user.email }}
-        <a href="{{ url_for('user.edit_user', user_id=user.id) }}">Edit</a>
-        <form action="{{ url_for('user.delete_user', user_id=user.id) }}" method="POST" style="display:inline;">
-            <button type="submit">Delete</button>
-        </form>
-    </li>
-    {% endfor %}
-</ul>
+<span class="title">
+    <h1>{% block title %} Users {% endblock %}</h1>
+</span>
+<div class="content">
+    <a href="{{ url_for('user.new_user') }}">Create New User</a>
+    <ul>
+        {% for user in users %}
+        <li>
+            {{ user.username }} - {{ user.email }}
+            <a href="{{ url_for('user.edit_user', user_id=user.id) }}">Edit</a>
+            <form action="{{ url_for('user.delete_user', user_id=user.id) }}" method="POST" style="display:inline;">
+                <button type="submit">Delete</button>
+            </form>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
 {% endblock %}
