--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -15,22 +15,7 @@
    </style>
 </head>
 <body>
-    <nav>
-        <a href="{{ url_for('user.list_users') }}">Users</a>
-        <a href="{{ url_for('game.list_games') }}">Games</a>
-        <a href="{{ url_for('scene.list_scenes') }}">Scenes</a>
-        <a href="{{ url_for('light.list_lights') }}">Lights</a>
-        <a href="{{ url_for('prop.list_props') }}">Props</a>
-        <a href="{{ url_for('tag.list_tags') }}">Tags</a>
-        <a href="{{ url_for('camera.list_cameras') }}">Cameras</a>
-        <a href="{{ url_for('field.list_fields') }}">Fields</a>
-        <a href="{{ url_for('field_type.list_field_types') }}">Field Types</a>
-        <a href="{{ url_for('board.list_boards') }}">Boards</a>
-        <a href="{{ url_for('story.list_stories') }}">Stories</a>
-        <a href="{{ url_for('player.list_players') }}">Players</a>
-        <a href="{{ url_for('user.login') }}">Login</a>
-        <a href="{{ url_for('user.register') }}">Register</a>
-    </nav>
+    {% include 'navbar.html' %}
     <hr>
     <div class="content">
         {% block content %} {% endblock %}
