--- a/flask_app/app/templates/navbar.html
+++ b/flask_app/app/templates/navbar.html
@@ -1,5 +1,5 @@
 <header>
-    <a class="logo" href="{{ url_for('app.main') }}">Home</a>
+    <a class="logo" href="{{ url_for('main.index') }}">Home</a>
     <span class="separator"></span>
     <nav>
         <ul>
