--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -20,5 +20,7 @@
     <div class="content">
         {% block content %} {% endblock %}
     </div>
+    <hr>
+    {% include 'messages.html' %}
 </body>
 </html>
