--- a/flask_app/app/templates/registration/registration.html
+++ b/flask_app/app/templates/registration/registration.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
 <div class="content-section">
     <div class="row justify-content-center">
         <div class="col-6 mt-5">
