--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -22,5 +22,6 @@
     </div>
     <hr>
     {% include 'messages.html' %}
+    <script src="{{ url_for('static', filename='js/flowbite.js') }}."></script>
 </body>
 </html>
