--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>{% block title %} {% endblock %}</title>
    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-   <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+   <link rel="stylesheet" href="{{ url_for('src', filename='output.css') }}">
    <script src="https://cdn.babylonjs.com/babylon.js"></script>
    <style>
        #renderCanvas {
