--- a/flask_app/app/templates/index.html
+++ b/flask_app/app/templates/index.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-<h1 class="text-3xl font-bold underline">Index page</h1>
+<h1 class="text-3xl text-blue-600 font-bold underline">Index page</h1>
 
 {% endblock %}
