--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -23,6 +23,6 @@
     </div>
     <hr>
     {% include 'messages.html' %}
-    <script src="{{ url_for('static', filename='js/flowbite.js') }}."></script>
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
 </body>
 </html>
