--- a/flask_app/app/templates/navbar.html
+++ b/flask_app/app/templates/navbar.html
@@ -1,33 +1,46 @@
-<header>
-    <a class="logo" href="{{ url_for('main.index') }}">Home</a>
-    <span class="separator"></span>
-    <nav>
-        <ul>
-            {% if current_user.is_authenticated %}
-            <li> <a class="nav-link" href="{{ url_for('auth.profile', user_id=current_user.id) }}">{{
-                    current_user.username}}</a></li>
-            <li><a class="nav-link" href={{ url_for('game.menu') }}>New Game</a></li>
-            <li> <a class="nav-link" href={{ url_for('game.join_game') }}>Join Game</a></li>
-            <li> <a class="nav-link" href={{ url_for('logout.logout') }}>Logout</a></li>
-            {% else %}
-            <li> <a class="nav-link" href="{{ url_for('registration.registration') }}">Registration</a></li>
-            <li> <a class="nav-link" href="{{ url_for('login.login') }}">Login</a></li>
-            {% endif %}
-            <li> <a class="nav-link" href="{{ url_for('board.list_boards') }}">Boards</a></li>
-            <li> <a class="nav-link" href="{{ url_for('camera.list_cameras') }}">Cameras</a></li>
-            <li> <a class="nav-link" href="{{ url_for('character.list_characters') }}">Characters</a></li>
-            <li> <a class="nav-link" href="{{ url_for('field.list_fields') }}">Fields</a></li>
-            <li> <a class="nav-link" href="{{ url_for('field_type.list_field_types') }}">Field Types</a></li>
-            <li> <a class="nav-link" href="{{ url_for('game.list_games') }}">Games</a></li>
-            <li> <a class="nav-link" href="{{ url_for('light.list_lights') }}">Lights</a></li>
-            <li> <a class="nav-link" href="{{ url_for('player.list_players') }}">Players</a></li>            
-            <li> <a class="nav-link" href="{{ url_for('prop.list_props') }}">Props</a></li>
-            <li> <a class="nav-link" href="{{ url_for('scene.list_scenes') }}">Scenes</a></li>
-            <li> <a class="nav-link" href="{{ url_for('screenplay.list_screenplays') }}">Screenplays</a></li>
-            <li> <a class="nav-link" href="{{ url_for('shot.list_shots') }}">Shots</a></li>
-            <li> <a class="nav-link" href="{{ url_for('story.list_stories') }}">Stories</a></li>
-            <li> <a class="nav-link" href="{{ url_for('tag.list_tags') }}">Tags</a></li>
-            <li> <a class="nav-link" href="{{ url_for('user.list_users') }}">Users</a></li>
-        </ul>
-    </nav>
-</header>
+<nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
+    <div class="container flex flex-wrap items-center justify-between mx-auto">
+        <a href="https://flowbite.com/" class="flex items-center">
+            <img src="https://flowbite.com/docs/images/logo.svg" class="h-6 mr-3 sm:h-9" alt="Flowbite Logo">
+            <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+        </a>
+        <div class="flex md:order-2">
+            <button type="button"
+                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Get
+                started</button>
+            <button data-collapse-toggle="navbar-cta" type="button"
+                class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                aria-controls="navbar-cta" aria-expanded="false">
+                <span class="sr-only">Open main menu</span>
+                <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                        d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                        clip-rule="evenodd"></path>
+                </svg>
+            </button>
+        </div>
+        <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-cta">
+            <ul
+                class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+                <li>
+                    <a href="#"
+                        class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white"
+                        aria-current="page">Home</a>
+                </li>
+                <li>
+                    <a href="#"
+                        class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
+                </li>
+                <li>
+                    <a href="#"
+                        class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Services</a>
+                </li>
+                <li>
+                    <a href="#"
+                        class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
