--- a/flask_app/app/templates/navbar.html
+++ b/flask_app/app/templates/navbar.html
@@ -1,8 +1,8 @@
 <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
     <div class="container flex flex-wrap items-center justify-between mx-auto">
-        <a href="https://flowbite.com/" class="flex items-center">
-            <img src="https://flowbite.com/docs/images/logo.svg" class="h-6 mr-3 sm:h-9" alt="Flowbite Logo">
-            <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+        <a href="{{ url_for('main.index') }}" class="flex items-center">
+            <img src="{{ url_for('static', filename='images/logo.svg') }}" class="h-6 mr-3 sm:h-9" alt="Flask App Logo">
+            <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Flask App</span>
         </a>
         <div class="flex md:order-2">
             <button type="button"
